src/styles/globals.css
@layer theme, base, components, utilities;

@source "../../node_modules/streamdown/dist/*.js";
@source "../../node_modules/@streamdown/math/dist/*.js";
@source "../../node_modules/@streamdown/mermaid/dist/*.js";

/* space-grotesk-latin-300-normal */
@font-face {
  font-family: "Space Grotesk";
  font-style: normal;
  font-display: swap;
  font-weight: 300;
  src:
    url(@fontsource/space-grotesk/files/space-grotesk-latin-300-normal.woff2) format("woff2"),
    url(@fontsource/space-grotesk/files/space-grotesk-latin-300-normal.woff) format("woff");
  unicode-range:
    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
    U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* space-grotesk-vietnamese-300-normal */
@font-face {
  font-family: "Space Grotesk";
  font-style: normal;
  font-display: swap;
  font-weight: 300;
  src:
    url(@fontsource/space-grotesk/files/space-grotesk-vietnamese-300-normal.woff2) format("woff2"),
    url(@fontsource/space-grotesk/files/space-grotesk-vietnamese-300-normal.woff) format("woff");
  unicode-range:
    U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301,
    U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
}

/* jetbrains-mono-latin-200-normal */
@font-face {
  font-family: "JetBrains Mono";
  font-style: normal;
  font-display: swap;
  font-weight: 200;
  src:
    url(@fontsource/jetbrains-mono/files/jetbrains-mono-latin-200-normal.woff2) format("woff2"),
    url(@fontsource/jetbrains-mono/files/jetbrains-mono-latin-200-normal.woff) format("woff");
  unicode-range:
    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
    U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* jetbrains-mono-latin-300-normal */
@font-face {
  font-family: "JetBrains Mono";
  font-style: normal;
  font-display: swap;
  font-weight: 300;
  src:
    url(@fontsource/jetbrains-mono/files/jetbrains-mono-latin-300-normal.woff2) format("woff2"),
    url(@fontsource/jetbrains-mono/files/jetbrains-mono-latin-300-normal.woff) format("woff");
  unicode-range:
    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
    U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* jetbrains-mono-vietnamese-200-normal */
@font-face {
  font-family: "JetBrains Mono";
  font-style: normal;
  font-display: swap;
  font-weight: 200;
  src:
    url(@fontsource/jetbrains-mono/files/jetbrains-mono-vietnamese-200-normal.woff2) format("woff2"),
    url(@fontsource/jetbrains-mono/files/jetbrains-mono-vietnamese-200-normal.woff) format("woff");
  unicode-range:
    U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301,
    U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
}

/* jetbrains-mono-vietnamese-300-normal */
@font-face {
  font-family: "JetBrains Mono";
  font-style: normal;
  font-display: swap;
  font-weight: 300;
  src:
    url(@fontsource/jetbrains-mono/files/jetbrains-mono-vietnamese-300-normal.woff2) format("woff2"),
    url(@fontsource/jetbrains-mono/files/jetbrains-mono-vietnamese-300-normal.woff) format("woff");
  unicode-range:
    U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301,
    U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
}

@import "tailwindcss";
@import "tw-animate-css/prefix";

@plugin "@tailwindcss/typography";

@custom-variant dark (&:is(.dark *));

@theme {
  --font-sans:
    "Space Grotesk", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
    "Segoe UI Symbol", "Noto Color Emoji", sans-serif;

  --font-serif: "Space Grotesk", ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;

  --font-mono:
    "JetBrains Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
    "Courier New", monospace;

  --animate-caret-blink: caret-blink 1.25s ease-out infinite;

  @keyframes caret-blink {
    0%,
    70%,
    100% {
      opacity: "1";
    }
    20%,
    50% {
      opacity: "0";
    }
  }
}

:root {
  --background: oklch(0.2155 0.0254 284.0647);
  --foreground: oklch(0.8787 0.0426 272.2767);
  --card: oklch(0.2429 0.0304 283.911);
  --card-foreground: oklch(0.8787 0.0426 272.2767);
  --popover: oklch(0.4037 0.032 280.152);
  --popover-foreground: oklch(0.8787 0.0426 272.2767);
  --primary: oklch(0.7871 0.1187 304.7693);
  --primary-foreground: oklch(0.2429 0.0304 283.911);
  --secondary: oklch(0.324 0.0319 281.9784);
  --secondary-foreground: oklch(0.8787 0.0426 272.2767);
  --muted: oklch(0.2973 0.0294 276.2144);
  --muted-foreground: oklch(0.751 0.0396 273.932);
  --accent: oklch(0.4037 0.032 280.152);
  --accent-foreground: oklch(0.8787 0.0426 272.2767);
  --destructive: oklch(0.7 0.13 30);
  --destructive-foreground: oklch(0.15 0.065 304);
  --border: oklch(0.324 0.0319 281.9784);
  --input: oklch(0.324 0.0319 281.9784);
  --ring: oklch(0.7871 0.1187 304.7693);

  --chart-1: oklch(0.7871 0.1187 304.7693);
  --chart-2: oklch(0.8166 0.091 277.3092);
  --chart-3: oklch(0.751 0.0396 273.932);
  --chart-4: oklch(0.6865 0.0374 274.7253);
  --chart-5: oklch(0.6176 0.0367 276.0047);
  --sidebar: oklch(0.1828 0.0204 284.2039);

  --sidebar-foreground: oklch(0.8787 0.0426 272.2767);
  --sidebar-primary: oklch(0.7871 0.1187 304.7693);
  --sidebar-primary-foreground: oklch(0.2429 0.0304 283.911);
  --sidebar-accent: oklch(0.324 0.0319 281.9784);
  --sidebar-accent-foreground: oklch(0.8787 0.0426 272.2767);
  --sidebar-border: oklch(0.4037 0.032 280.152);
  --sidebar-ring: oklch(0.7871 0.1187 304.7693);

  --radius: 0.5rem;

  --shadow-2xs: 0px 4px 6px 0px hsl(240 30% 25% / 0.06);
  --shadow-xs: 0px 4px 6px 0px hsl(240 30% 25% / 0.06);
  --shadow-sm: 0px 4px 6px 0px hsl(240 30% 25% / 0.12), 0px 1px 2px -1px hsl(240 30% 25% / 0.12);
  --shadow: 0px 4px 6px 0px hsl(240 30% 25% / 0.12), 0px 1px 2px -1px hsl(240 30% 25% / 0.12);
  --shadow-md: 0px 4px 6px 0px hsl(240 30% 25% / 0.12), 0px 2px 4px -1px hsl(240 30% 25% / 0.12);
  --shadow-lg: 0px 4px 6px 0px hsl(240 30% 25% / 0.12), 0px 4px 6px -1px hsl(240 30% 25% / 0.12);
  --shadow-xl: 0px 4px 6px 0px hsl(240 30% 25% / 0.12), 0px 8px 10px -1px hsl(240 30% 25% / 0.12);
  --shadow-2xl: 0px 4px 6px 0px hsl(240 30% 25% / 0.3);

  --tracking-normal: 0.025em;
  --spacing: 0.25rem;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);

  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);

  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --shadow-2xs: var(--shadow-2xs);
  --shadow-xs: var(--shadow-xs);
  --shadow-sm: var(--shadow-sm);
  --shadow: var(--shadow);
  --shadow-md: var(--shadow-md);
  --shadow-lg: var(--shadow-lg);
  --shadow-xl: var(--shadow-xl);
  --shadow-2xl: var(--shadow-2xl);

  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
  --tracking-normal: var(--tracking-normal);
  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }

  body {
    @apply bg-background text-foreground;
    letter-spacing: var(--tracking-normal);
  }
}

.codeblock pre.shiki,
.custom-scroll,
#textarea-chat-input {
  scrollbar-gutter: stable both-edges;

  scrollbar-width: thin;
  scrollbar-color: var(--color-ring) transparent;
}

.codeblock pre.shiki::-webkit-scrollbar,
.custom-scroll::-webkit-scrollbar,
#textarea-chat-input::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

.codeblock pre.shiki::-webkit-scrollbar-track,
.custom-scroll::-webkit-scrollbar-track,
#textarea-chat-input::-webkit-scrollbar-track {
  background: transparent;
}

.codeblock pre.shiki::-webkit-scrollbar-thumb,
.custom-scroll::-webkit-scrollbar-thumb,
#textarea-chat-input::-webkit-scrollbar-thumb {
  background: var(--color-ring);
  border-radius: 0.5rem;
}

.codeblock pre.shiki::-webkit-scrollbar-thumb:hover,
.custom-scroll::-webkit-scrollbar-thumb:hover,
#textarea-chat-input::-webkit-scrollbar-thumb:hover {
  background: var(--color-ring);
}

.appearance-none::-webkit-inner-spin-button,
.appearance-none::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.appearance-none {
  -moz-appearance: textfield;
  appearance: none;
}

*::selection {
  @apply bg-accent text-current;
}

div[data-slot="codeblock"] {
  pre.shiki {
    @apply pointer-events-auto h-max min-h-full w-max min-w-full p-3 pr-8;
    scrollbar-gutter: "stable both-edges";
  }

  &[data-should-wrap="true"] {
    pre.shiki {
      @apply w-full text-wrap wrap-anywhere break-all whitespace-break-spaces;
    }
  }
}

#sidebar-provider[data-disable-blur="true"] .backdrop-blur-md {
  @apply backdrop-blur-none!;
}

#sidebar-provider[data-disable-blur="true"] .backdrop-saturate-150 {
  @apply backdrop-saturate-100!;
}

#sidebar-provider[data-disable-blur="true"] .backdrop-blur-md.backdrop-saturate-150 {
  @apply backdrop-blur-none! backdrop-saturate-100!;
}

.katex-display {
  @apply block w-full;
}

[data-sonner-toaster] {
  @apply font-sans!;
}

